Change server port to use environment variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.application.name=FoodDeliveryApplication
 # ======================
 # Server Configuration
 # ======================
-server.port=8185
+server.port=${PORT:8080}
+
 
 server.servlet.context-path=/
 
