Replace Maven compiler plugin with Spring Boot plugin

--- a/pom.xml
+++ b/pom.xml
@@ -126,15 +126,16 @@
     <build>
     <plugins>
         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.13.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>3.2.2</version>
             <configuration>
-                <release>21</release>
+                <mainClass>com.fooddelivery.FoodDeliveryApplication</mainClass>
             </configuration>
         </plugin>
     </plugins>
 </build>
+
 
 
 </project>
