--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,12 @@
         </dependency>
 
         <!-- DB -->
-       <dependency>
-             <groupId>org.postgresql</groupId>
-             <artifactId>postgresql</artifactId>
-             <scope>runtime</scope>
-         </dependency>
+      <dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+    <scope>runtime</scope>
+</dependency>
+
 
 
         <!-- Lombok -->
