--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ server.servlet.context-path=/
 # ======================
 # Database Configuration
 # ======================
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.name=rest_api
 #spring.datasource.url=jdbc:mysql://localhost:3306/fooddilivery
 #spring.datasource.username=root
