--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.servlet.context-path=/
 # Database Configuration
 # ======================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.name=rest_api
+#spring.datasource.name=rest_api
 #spring.datasource.url=jdbc:mysql://localhost:3306/fooddilivery
 #spring.datasource.username=root
 #spring.datasource.password=${DB_PASSWORD}
@@ -26,8 +26,8 @@ spring.jpa.properties.hibernate.format_sql=true
 # ======================
 # H2 Console (for development)
 # ======================
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
 # ======================
 # Thymeleaf Configuration
